<resources>
    <string name="app_name">Grouptivity</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for the tab navigation -->
    <string name="group_tab_label">Groups</string>
    <string name="activity_tab_label">Activities</string>

    <!-- Strings used for fragments for navigation -->
    <string name="groups_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="group_invites_fragment_label">Group Invites Fragment</string>
    <string name="main_navview_groups_item_text">Groups</string>
    <string name="main_navview_activities_item_text">Activities</string>
    <string name="main_navview_invites_item_text">Pending Invites</string>

    <string name="groups_text">This is the Groups Fragment</string>
    <string name="activities_text">This is the Activities Fragment</string>

    <!-- Strings used for create group dialog -->
    <string name="temp_group_text">Enter group name here</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <!--Strings used in groups_fragment layout -->
    <string name="create_group_title">Create Group</string>
    <string name="view_invites_button">View Invites</string>

    <!-- Strings used in group_invites_fragment layout -->
    <string name="pending_invites">Pending Invites</string>
    <string name="invite_sender">Sender: </string>
    <string name="invite_accept">Accept</string>
    <string name="invite_decline">Decline</string>

    <!-- Strings used for login page -->
    <string name="login_title">Login</string>
    <string name="username">Enter email here</string>
    <string name="password">Enter password here</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>

    <!-- Strings used for group_message_fragment -->
    <string name="new_message_hint_text">Send Message</string>
    <string name="leave_group_text">Leave Group</string>
    <string name="message_members_text">Members</string>

    <!-- Strings used for invite_user_dialog_fragment -->
    <string name="send_invite_button_text">Send Invite</string>
    <string name="send_invite_hint_text">myFakeEmail@gmail.com</string>
    <string name="invite_dialog_title">Type the user\'s email below to send an invite</string>

    <!-- Strings used for invite_user_dialog_fragment -->
    <string name="are_you_sure_yes_text">Yes</string>
    <string name="are_you_sure_header_text">Are you sure?</string>

    <!-- Misc -->
    <string name="send_button_text">Send</string>
    <string name="back_str">Back</string>
    <string name="type_group_name">Type Your Group Name Here</string>


    <!-- Strings used for Firebase Realtime DB I/O -->
    <string name="firebase_groupMessages">groupMessages</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="nickname_required">The nickname field is required</string>

    <!-- Strings related to the activity view -->
    <string name="image_description">Icon for activity</string>
    <string name="thumbs_up">👍</string>
    <string name="thumbs_down">👎</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_fragment">Map</string>

    <!-- Strings related to sharing activity -->
    <string name="share_button">Share</string>
    <string name="rename_group_button_text">RENAME GROUP</string>

</resources>