<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/invite_dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_dialog_title"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/invite_dialog_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/invite_dialog_title"
        android:hint="@string/send_invite_hint_text"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/invite_dialog_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/invite_dialog_editText"
        android:layout_centerInParent="true"
        android:text="@string/send_button_text" />

    <Button
        android:id="@+id/dialogButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/invite_dialog_editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:text="@string/cancel_button" />

</RelativeLayout>