<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="false"
    android:orientation="vertical">

    <TextView
        android:id="@+id/are_you_sure_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure_header_text"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/are_you_sure_yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/are_you_sure_textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/are_you_sure_yes_text" />

    <Button
        android:id="@+id/are_you_sure_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/are_you_sure_textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:text="@string/cancel_button" />

</RelativeLayout>