<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/GroupsFragment">
    <fragment
        android:id="@+id/GroupsFragment"
        android:name="com.group9.grouptivity.ui.GroupsFragment"
        android:label="@string/groups_fragment_label"
        tools:layout="@layout/groups_fragment">

        <action
            android:id="@+id/action_GroupsFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_GroupsFragment_to_GroupInvitesFragment"
            app:destination="@id/GroupInvitesFragment" />
        <action
            android:id="@+id/action_GroupsFragment_to_GroupMessageFragment"
            app:destination="@id/GroupMessageFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.group9.grouptivity.ui.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/GroupsFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.group9.grouptivity.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_GroupsFragment"
            app:destination="@id/GroupsFragment" />
    </fragment>

    <fragment
        android:id="@+id/GroupInvitesFragment"
        android:name="com.group9.grouptivity.ui.GroupInvitesFragment"
        android:label="@string/group_invites_fragment_label"
        tools:layout="@layout/group_invites_fragment" >
        <action
            android:id="@+id/action_GroupInvitesFragment_to_GroupsFragment"
            app:destination="@id/GroupsFragment" />
    </fragment>


    <fragment
        android:id="@+id/GroupMessageFragment"
        android:name="com.group9.grouptivity.ui.GroupMessageFragment"
        android:label="Group Message Fragment"
        tools:layout="@layout/group_message_fragment">

        <action
            android:id="@+id/action_GroupMessageFragment_to_GroupsFragment"
            app:destination="@id/GroupsFragment" />
    </fragment>

    <fragment
        android:id="@+id/google_map"
        android:name="com.group9.grouptivity.ui.MapsFragment"
        android:label="Maps Fragment"
        tools:layout="@layout/maps_fragment" >
        <action
            android:id="@+id/action_MapsFragment_to_GroupsFragment"
            app:destination="@id/GroupsFragment" />
    </fragment>


</navigation>